done weather app / needs more design

--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
+  background-image:url(./asset/damo.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
 }
+  
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
